--- a/htmlIntro/myForm.html
+++ b/htmlIntro/myForm.html
@@ -44,8 +44,9 @@
     <input type="date" name="d1"> 
     <br>
 <div>
+    
     <h1>At Chipotle, What is your Preferred Ingredient? </h1>
-    <fieldset>
+    <fieldset style = "margin: 50;">
         <input type="checkbox" name="c1" id = "c1">
         <label> Lettuce </label> <br>
         <input type="checkbox" name="c2" id ="c2">
